# feloopy

./: .gitignore  .readthedocs.yml  CHANGES.txt  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  SECURITY.md  blah.lp  demolicense.sio  example.py  mkdocs.yml  output.txt  pyproject.toml  readthedocs.yaml  setup.py  tempCodeRunnerFile.python  test.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
docs/: README.md  conf.py  constraint.md  convex.md  decision_variables.rst  exact.md  exact_optimization.md  heuristic.md  index.md  index.rst  multicriteria.md  multiobjective.md  requirements.txt  uncertain.md
docs/_static/: custom.css
docs/about/: index.md
docs/concepts/: constraints.md  handlers.md  index.md  parameters.md  sets.md  variables.md
docs/examples/: reading.py
docs/stylesheets/: better.css
docs/user-guide/: getting-started.md  installation.md
documentation/: Exact_List.md  Heuristic_List.md  Solvers.md  Syntax.md  Tutorial.md  Updates.md
examples/: ReadMe.md  assingment_problem_set_based.py  constraint_flexible_job_shop_scheduling.py  constraint_flexible_resource_constrained_scheduling.py  constraint_single_machine_scheduling_min_max_lateness.py  constraint_single_machine_scheduling_min_max_tardiness.py  constraint_single_machine_scheduling_total_weighted_completion_time_precedence.py  constraint_single_machine_scheduling_weighted_tardy_jobs.py  exact_advertising_problem_set_based.py  exact_assingment_problem_set_based.py  exact_common_weight_data_envelopment_analysis.py  exact_distribution_planning_problem_set_based.py  exact_flow_shop_scheduling_problem_set_based.py  exact_knapsack_problem_set_based.py  exact_linear_regression_problem_set_based.py  exact_linear_regression_problem_tensor_based.py  exact_logistic_regression_problem_set_based.py  exact_maximum_volume_box.py  exact_multi_product_pricing_set_based.py  exact_n_queens_problem.py  exact_neos_server_usage.py  exact_production_planning_problem_set_based.py  exact_quadratic_assignment_problem_set_based.py  exact_resource_constrained_project_scheduling.py  exact_single_machine_scheduling_problem_set_based.py  exact_single_product_pricing_set_based.py  exact_staffing_problem_set_based.py  exact_sudoku_solver.py  exact_transportation_planning_problem_set_based.py  exact_traveling_salesperson_problem_set_based.py  heuristic_knapsack_problem_set_based.py  heuristic_multi_objective_optimization_problem_set_based.py  heuristic_single_facility_location_problem_all_distances_set_based.py  madm_ranking_aras.py  madm_ranking_borda.py  madm_ranking_cocoso.py  madm_ranking_codas.py  madm_ranking_copeland.py  madm_ranking_copras.py  madm_ranking_cradis.py  (+58 more)
examples/Combinatorial_Optimization/: assignment.py  knapsack.py  quadratic_assignment_problem.py  traveling_salesman.py
examples/Heuristic_Optimization/: knapsack.py  knapsack_feloopy.py  knapsack_mealpy.py
examples/Intelligence_Optimization/: binary_classification.py  integer_classification.py  linear_regression.py  nonlinear_regression.py  sparse_linear_regression.py  svm_binary_classification.py
examples/Location_Optimization/: single_facility_chebyshev.py  single_facility_euclidean.py  single_facility_minkowski.py  single_facility_rectangular.py  single_facility_rectangular_linearized.py  single_facility_squared_euclidean.py
examples/Route_Optimization/: capacitated_vehicle_routing.py  traveling_salesman.ipynb  traveling_salesman.py
examples/Schedule_Optimization/: advertising.py  flow_shop.py  single_machine.py  staffing.py  tempCodeRunnerFile.py
examples/SupplyChain_Optimization/: pricing.py
examples/Supply_Chain_Optimization/: pricing_multi_product.py  pricing_single_product.py
examples/feloopy-0.2.8-/: constraint_flexible_job_shop_scheduling.py  constraint_single_machine_scheduling_weighted_tardy_jobs.py  data_exact_production_planning_problem.xlsx  exact_assingment_problem_set_based.py  exact_knapsack_problem_set_based.py  exact_linear_regression_problem_set_based.py  exact_linear_regression_problem_tensor_based.py  exact_logistic_regression_problem_set_based.py  exact_multi_product_pricing_set_based.py  exact_n_queens_problem.py  exact_neos_server_usage.py  exact_production_planning_problem_set_based.py  exact_quadratic_assignment_problem_set_based.py  exact_single_machine_scheduling_problem_set_based.py  exact_single_product_pricing_set_based.py  exact_staffing_problem_set_based.py  exact_sudoku_solver.py  exact_transportation_planning_problem_set_based.py  exact_traveling_salesperson_problem_set_based.py  heuristic_knapsack_problem_set_based.py  heuristic_multi_objective_optimization_problem_set_based.py  madm_ranking_fuzzy_moora.py  (+12 more)
feloopy/: README.md  __init__.py  cli.py  exact.py  feloopy.py  heuristic.py  main.py  setup.py  tempCodeRunnerFile.python
feloopy.egg-info/: PKG-INFO  SOURCES.txt
source/: conf.py  index.rst
tests/: test_exact.py  test_exact_kp.py  test_exact_tsp.py  test_feloopy.py  test_oi.py
(+382 files in other folders)
