[tool.poetry]
name = "feloopy"
version = "0.2.8"
description = "FelooPy: An integrated optimization environment (IOE) for automated operations research (AutoOR) in Python."
authors = ["Keivan Tafakkori <k.tafakkori@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
gputil = "^1.4.0"
infix = "^1.2"
matplotlib = "^3.8.2"
numba = "^0.58.1"
openpyxl = "^3.1.2"
pandas = "^2.1.3"
plotly = "^5.18.0"
psutil = "^5.9.6"
py-cpuinfo = "^9.0.0"
tabulate = "^0.9.0"
win-unicode-console = "^0.5"
scikit-learn = "^1.3.2"
polars = "^0.19.19"
xlsxwriter = "^3.1.9"
nbformat = "^5.9.2"

[tool.poetry.extras]
pico = []
nano = [ "pymprog^1.1.2"]
micro = [ "gekko^1.0.6", "mealpy^3.0.1", "pymprog^1.1.2"]
mini = [ "ortools^9.8.3296", "cvxpy^1.4.1", "gekko^1.0.6", "mealpy^3.0.1", "pymprog^1.1.2"]
full = [ "pymoo^0.6.1.1", "pydecision^4.3.9", "ortools^9.8.3296", "cvxpy^1.4.1", "gekko^1.0.6", "mealpy^3.0.1", "pymprog^1.1.2"]
stock = [ "pulp^2.7.0", "pyomo^6.7.0", "picos^2.4.17", "linopy^0.3.2", "mip^1.15.0", "rsome^1.2.1", "niapy^2.0.5", "pygad^3.2.0", "pymoo^0.6.1.1", "pydecision^4.3.9", "ortools^9.8.3296", "cvxpy^1.4.1", "gekko^1.0.6", "mealpy^3.0.1", "pymprog^1.1.2"]
plus_gurobi = [ "gurobipy^11.0.0"]
plus_cplex = [ "cplex^22.1.1.1", "docplex^2.25.236"]
plus_xpress = [ "xpress^9.2.5"]
plus_copt = [ "coptpy^7.0.3"]
hyper = [ "pulp^2.7.0", "pyomo^6.7.0", "picos^2.4.17", "linopy^0.3.2", "mip^1.15.0", "rsome^1.2.1", "niapy^2.0.5", "pygad^3.2.0", "pymoo^0.6.1.1", "pydecision^4.3.9", "ortools^9.8.3296", "cvxpy^1.4.1", "gekko^1.0.6", "mealpy^3.0.1", "pymprog^1.1.2", "gurobipy^11.0.0", "cplex^22.1.1.1", "docplex^2.25.236", "xpress^9.2.5", "coptpy^7.0.3"]
only_cylp = [ "cylp^0.92.2"]
only_linux = [ "pymultiobjective^1.5.4"]
mega = [ "pulp^2.7.0", "pyomo^6.7.0", "picos^2.4.17", "linopy^0.3.2", "mip^1.15.0", "rsome^1.2.1", "niapy^2.0.5", "pygad^3.2.0", "pymoo^0.6.1.1", "pydecision^4.3.9", "ortools^9.8.3296", "cvxpy^1.4.1", "gekko^1.0.6", "mealpy^3.0.1", "pymprog^1.1.2", "gurobipy^11.0.0", "cplex^22.1.1.1", "docplex^2.25.236", "xpress^9.2.5", "coptpy^7.0.3", "cylp^0.92.2", "pymultiobjective^1.5.4"]

[tool.poetry.scripts]
feloopy = "feloopy.cli:main"
flp = "feloopy.cli:main"